--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,13 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - node/test:
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '16.10'
+          docker:
+            - image: cimg/node:17.2.0
           # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+        steps:
+          - checkout
+          - node/install-packages:
+              pkg-manager: npm
+          - run:
+          command: npm run test
+          name: Run tests
