--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,25 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
-
 orbs:
-  node: circleci/node@4.7
+  node: circleci/node@4.7.0
+  
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - node/test:
-          docker:
-            - image: cimg/node:17.2.0
-          # If you are using yarn, change the line below from "npm" to "yarn"
-        steps:
-          - checkout
-          - node/install-packages:
-              pkg-manager: npm
-          - run:
+jobs:
+  dev_and_test:
+    docker:
+      - image: cimg/node:17.2.0
+    steps:
+      - checkout
+      - node/install-packages:
+          pkg-manager: yarn
+      - run:
           command: npm run test
           name: Run tests
+     
+
+ 
+
+workflows:
+  test_my_app:
+    jobs:
+      - dev_and_test
+      
