--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2.1
 orbs:
   node: circleci/node@4.7.0
-  
 
 jobs:
   dev_and_test:
@@ -10,16 +9,12 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          pkg-manager: yarn
+          pkg-manager: npm
       - run:
           command: npm run test
           name: Run tests
-     
-
- 
 
 workflows:
   test_my_app:
     jobs:
       - dev_and_test
-      
