--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,14 @@ jobs:
 
     steps:
 - uses: actions/checkout@v3
-- name: Use Node.js
-- uses: actions/setup-node@v3
+
+- name: Setup Node.js environment
+  uses: actions/setup-node@v3.1.1
+
+
   with:
     node-version: '14'
+    cache: 'npm'
 
 - name: Install Dependencies
 - run: npm install
