--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Node.js CI
 
 # Controls when the workflow will run
 on:
@@ -9,7 +9,7 @@ on:
     branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,7 +22,7 @@ jobs:
 - uses: actions/checkout@v3
 
 - name: Setup Node.js environment
-  uses: actions/setup-node@v3.1.1
+  uses: actions/setup-node@v3
 
 
   with:
